--- a/backend/templates/build.html
+++ b/backend/templates/build.html
@@ -12,7 +12,7 @@
     <div class="total-pages-visits"><p>Total Page Visits: {{ total_visits }}</p></div>
     <div id="container-main" class="container-main">
     <div class="div-form" onmouseenter="closeFields()">
-        <form  id="form" class="form" method="POST" action="https://stockvectorrigs.herokuapp.com/api/builder/" >
+        <form  id="form" class="form" method="POST" action="https://vectorrigs.herokuapp.com/api/builder/" >
         {% csrf_token %}
             <!--<input type="hidden" value="https://stockvectorrigs.herokuapp.com/manager/builder" name="next"> -->
             <!--<label for="id_type">Type:</label>
