--- a/users/templates/user.html
+++ b/users/templates/user.html
@@ -1,9 +1,10 @@
-<link rel="stylesheet" href="./../static/css/users.css">
+{% load static %}
+<link rel="stylesheet" href="{% static 'css/users.css' %}">
 <a href="/manager/builder/">Build a New Item</a>
-<a href="/admin/frontend/items">Main Admin Page</a>
+<a href="/admin/backend/item">Main Admin Page</a>
 <a href="/manager/media/">Media Manager</a>
 <a href="/">Website Home</a>
-<a href="/admin/frontend/message/">Contact Requests</a>
+<a href="/admin/backend/message/">Contact Requests</a>
 <a href="/users/logout/">logout?</a>
 <a href="/manager/inventory/" >Inventory</a>
 <a href="/manager/inventory-sold/" >Sold Inventory</a>
