--- a/backend/templates/index-admin.html
+++ b/backend/templates/index-admin.html
@@ -16,7 +16,7 @@
   <div class="nav-container" {% block js %}{% endblock %}>
         <div class="left-nav">
             <div class="logo" id="logo-div"><img src="{% static 'images/logo.png' %}"></div>
-            <div class="title-banner"><a href="/admin/frontend/items"><h2>Full Flight Sports Admin</h2></a></div>
+            <div class="title-banner"><a href="/admin/backend/"><h2>Full Flight Sports Admin</h2></a></div>
         </div>
     </div>
 
