Fixing media upload page

--- a/backend/templates/media.html
+++ b/backend/templates/media.html
@@ -23,9 +23,14 @@ or photos via this method! (There will be a private upload file section soon!)</
 <div class="left-div">
 <h1>Image Files</h1>
 <h3>File Converters if needed to upload pictures:</h3>
-<a href="https://express.adobe.com/tools/convert-to-jpg">PNG to JPG: Change a .png image file format to .jpg</a>
-<a href="https://tiff2jpg.com/">TIFF to JPG: Change a .tiff image file format to .jpg</a>
-<a href="https://ezgif.com/gif-to-jpg">GIF to JPG: Change a .gif image file format to .jpg</a>
+<ul>
+    <li><a href="https://express.adobe.com/tools/convert-to-jpg">PNG to JPG: Change a .png image file format to .jpg</a></li>
+    <li><a href="https://tiff2jpg.com/">TIFF to JPG: Change a .tiff image file format to .jpg</a></li>
+    <li><a href="https://ezgif.com/gif-to-jpg">GIF to JPG: Change a .gif image file format to .jpg</a></li>
+</ul>
+
+
+
 
 
 
