--- a/frontend/templates/sportrigs.html
+++ b/frontend/templates/sportrigs.html
@@ -14,7 +14,7 @@
                 <div class="container">
                     <div class="inner-container">
                         <div class="container-left">
-                            <img src="{% static '' %}{{ x.picture }}" height="140" width="212">
+                            <img src="{% static '' %}{{ x.picture.key }}" height="140" width="212">
                             {% if x.sold %}<img class="sold-img" src="{% static 'sold.gif' %}">{% endif %}
                         </div>
                         <div class="container-right">
