--- a/backend/templates/media.html
+++ b/backend/templates/media.html
@@ -35,7 +35,6 @@ or photos via this method! (There will be a private upload file section soon!)</
 <form method='POST' id='uploadForm'>
     {% csrf_token %}
     <input type='file' name='file' id='files' multiple='multiple' accept="image/*, video/*, audio/*" />
-    <input type="submit" value="Upload">
 </form>
 
 <div id='displayList'>
@@ -54,6 +53,10 @@ or photos via this method! (There will be a private upload file section soon!)</
 <div class="right-div">
 <h1>Confirmation Reports</h1>
 <p>Upload PDF's to Storage</p>
+<form method='POST' id='uploadForm'>
+    {% csrf_token %}
+    <input type='file' name='file' id='files' multiple='multiple' accept="image/*, video/*, audio/*" />
+</form>
 <form>
     <input type="file">
     <button>Upload</button>
