--- a/backend/templates/media.html
+++ b/backend/templates/media.html
@@ -19,6 +19,12 @@ or photos via this method! (There will be a private upload file section soon!)</
     (<a target="_blank" href="https://803929774327.signin.aws.amazon.com/console">S3 Bucket Login</a>),
     after logged in click the second link (<a target="_blank" href="https://s3.console.aws.amazon.com/s3/buckets/stockvectorrigs?region=us-east-1&tab=objects">StockVectorRigs S3 Bucket</a>)
     OR search for s3 in the AWS Console search bar at the top of page after login. Select 'stockvectorigs' one under the bucket tab</p>
+<h4>NO SPACES IN File Name! (this can be fixed later, but for now. No spaces please!)</h4>
+<p>Upload Anything to Storage!</p>
+<form method='POST' id='uploadForm'>
+    {% csrf_token %}
+    <input type='file' name='file' id='files' multiple='multiple' accept="image/*, video/*, audio/*, application/pdf" />
+</form>
 <div class="all-files">
 <div class="left-div">
 <h1>Image Files</h1>
@@ -30,12 +36,7 @@ or photos via this method! (There will be a private upload file section soon!)</
     <li><a href="https://ezgif.com/gif-to-jpg">GIF to JPG: Change a .gif image file format to .jpg</a></li>
 </ul>
 -->
-<h4>NO SPACES IN File Name! (this can be fixed later, but for now. No spaces please!)</h4>
-<p>Upload Images to Storage</p>
-<form method='POST' id='uploadForm'>
-    {% csrf_token %}
-    <input type='file' name='file' id='files' multiple='multiple' accept="image/*, video/*, audio/*" />
-</form>
+
 
 <div id='displayList'>
     <p>Display List</p>
@@ -52,15 +53,6 @@ or photos via this method! (There will be a private upload file section soon!)</
 </div>
 <div class="right-div">
 <h1>Confirmation Reports</h1>
-<p>Upload PDF's to Storage</p>
-<form method='POST' id='uploadForm'>
-    {% csrf_token %}
-    <input type='file' name='file' id='files' multiple='multiple' accept="image/*, video/*, audio/*" />
-</form>
-<form>
-    <input type="file">
-    <button>Upload</button>
-</form>
 <ol>
     {% for x in bucket_object2 %}
     <li>{{ x }} <a target="_blank" href="https://stockvectorrigs.s3.amazonaws.com/{{ x }}">View Confirmation Report</a></li>
