--- a/backend/templates/media.html
+++ b/backend/templates/media.html
@@ -4,23 +4,23 @@
 View All Files
 
 
-<h3>To Upload an Image:</h3>
+<h3>To Upload a File:</h3>
 <ol>
-    <li>Click the button labeled 'browse' on the images section</li>
-    <li>Select Image to upload</li>
+    <li>Click the button labeled 'browse' below</li>
+    <li>Select a file to upload</li>
 </ol>
-<h3>After following the 2 steps above you will have uploaded the selected image to your Websites main private storage (aka Amazon Cloud). This image is instantly
+<h3>After following the 2 steps above you will have uploaded the selected file to your Websites main public storage (aka Amazon Cloud). This File is instantly
 viewable from the link provided after uploading. At the same time, this will automatically create a new database item under the Images section
     which (left sidebar in the Admin) is attachable to any Inventory Item. You can attach this image by selecting it from the dropdown when building
     a new Inventory Item (Newly uploaded items automatically propagate labeled as the file name you upload with example --> 'new_image.jpg'. You can find this Image information under the Images section on the left side of your admin page</h3>
-<p>All images uploaded under the images section are viewable to anyone on the internet. DO NOT upload private files
+<p>All files uploaded are viewable to anyone on the internet. DO NOT upload private files
 or photos via this method! (There will be a private upload file section soon!)</p>
 <p>TO ACCESS BUCKET DIRECTLY: Login to Bucket with the first link
     (<a target="_blank" href="https://803929774327.signin.aws.amazon.com/console">S3 Bucket Login</a>),
     after logged in click the second link (<a target="_blank" href="https://s3.console.aws.amazon.com/s3/buckets/stockvectorrigs?region=us-east-1&tab=objects">StockVectorRigs S3 Bucket</a>)
     OR search for s3 in the AWS Console search bar at the top of page after login. Select 'stockvectorigs' one under the bucket tab</p>
 
-<div style="margin-left: 40%">
+<div style="margin-left: 20%">
     <h4>NO SPACES IN File Name! (this can be fixed later, but for now. No spaces please!)</h4>
 <p>Upload Anything to Storage!</p>
 <form method='POST' id='uploadForm'>
