--- a/backend/templates/media.html
+++ b/backend/templates/media.html
@@ -20,7 +20,7 @@ or photos via this method! (There will be a private upload file section soon!)</
     after logged in click the second link (<a target="_blank" href="https://s3.console.aws.amazon.com/s3/buckets/stockvectorrigs?region=us-east-1&tab=objects">StockVectorRigs S3 Bucket</a>)
     OR search for s3 in the AWS Console search bar at the top of page after login. Select 'stockvectorigs' one under the bucket tab</p>
 
-<div style="margin-left: 20%">
+<div id="upload-div">
     <h4>NO SPACES IN File Name! (this can be fixed later, but for now. No spaces please!)</h4>
 <p>Upload Anything to Storage!</p>
 <form method='POST' id='uploadForm'>
