--- a/backend/templates/media.html
+++ b/backend/templates/media.html
@@ -28,7 +28,7 @@ or photos via this method! (There will be a private upload file section soon!)</
     <input type='file' name='file' id='files' multiple='multiple' accept="image/*, video/*, audio/*, application/pdf" />
 </form>
 <div id='displayList'>
-    <p>Display List</p>
+    <p>Upload List</p>
     <div id="file-url"></div>
 </div>
 </div>
