--- a/backend/static/css/media-styles.css
+++ b/backend/static/css/media-styles.css
@@ -17,7 +17,7 @@
     border: hidden;
     box-shadow: 0 0 20px black;
     width: 500px;
-    height: 150px;
+    height: auto;
     border-radius: 10px;
     background: rgba(100,100,25,.3);
     padding: 10px;
