--- a/backend/static/css/build.css
+++ b/backend/static/css/build.css
@@ -320,3 +320,12 @@ button {
     width: 100px;
     justify-self: center;
 }
+
+.div-form label {
+    font-family: Arial;
+    font-size: 12pt;
+    color: #b5db1a;
+    margin-left: 40%;
+    width: 50%;
+
+}
