update build page form display

--- a/backend/templates/build.html
+++ b/backend/templates/build.html
@@ -79,6 +79,7 @@
             <button id="description_btn" class="btnchanger" onclick=descriptionChange()>Change Description</button>
             <button id="instockclicker" class="btnchanger" onclick=inStockChange()>Change In Stock</button>
             <button id="soldclicker" class="btnchanger" onclick=soldChange()>Change Sold</button>
+            <button id="picture_btn" class="btnchanger" onclick=PictureChange()>Change Picture</button>
             <button id="deletebtn" class="btnchanger" onclick=deleteContainer()>Delete Item</button>
 
         </div>
