update build page form display

--- a/api/templates/api.html
+++ b/api/templates/api.html
@@ -4,7 +4,7 @@
     <input type="text" name="name">
     <input type="text" name="po_number" maxlength="50" id="po_number">
     <input type="number" name="serial_number" id="serial_number">
-    <input type="number" name="picture" id="id_picture">
+    <input type="number" name="picture" id="picture">
 
     <label for='sold'>False</label>
     <input type='checkbox' name='sold' id='sold' value='False'>
