--- a/api/templates/api.html
+++ b/api/templates/api.html
@@ -5,6 +5,7 @@
     <input type="text" name="po_number" maxlength="50" id="po_number">
     <input type="number" name="serial_number" id="serial_number">
     <input type="number" name="picture" id="picture">
+    <input type="number" name="confirmation_r" id="confirmation_r">
 
     <label for='sold'>False</label>
     <input type='checkbox' name='sold' id='sold' value='False'>
