--- a/backend/templates/index-admin.html
+++ b/backend/templates/index-admin.html
@@ -18,6 +18,12 @@
             <div class="logo" id="logo-div"><img src="{% static 'images/logo.png' %}"></div>
             <div class="title-banner"><a href="/admin/backend/"><h2>Full Flight Sports Admin</h2></a></div>
         </div>
+  <div class="admin-nav-links">
+      <a class="admin-nav-link" href="/manager/media/">Media Manager</a>
+      <a class="admin-nav-link" href="/manager/inventory/">Inventory</a>
+      <a class="admin-nav-link" href="/admin/backend/">Admin Backend</a>
+      <a class="admin-nav-link" href="/">Website Home</a>
+  </div>
     </div>
 
 
