update build page form display

--- a/frontend/templates/home.html
+++ b/frontend/templates/home.html
@@ -70,10 +70,10 @@
         </div>
     </div>
     <div class="footer-logos">
-        <div class="l"><img src="{% static 'images/1.jpg' %}"></div>
-        <div class="l"><img src="{% static 'images/2.jpg' %}"></div>
-        <div class="l"><img src="{% static 'images/3.jpg' %}"></div>
-        <div class="l"><img src="{% static 'images/4.jpg' %}"></div>
+        <div class="l"><img src="{% static 'images/front-1.jpg' %}"></div>
+        <div class="l"><img src="{% static 'images/front-2.jpg' %}"></div>
+        <div class="l"><img src="{% static 'images/front-3.jpg' %}"></div>
+        <div class="l"><img src="{% static 'images/front-4.jpg' %}"></div>
     </div>
     <div class="contact-footer" id="contact-footer">
     <div class="contact-us">
