--- a/backend/templates/index-admin.html
+++ b/backend/templates/index-admin.html
@@ -20,6 +20,7 @@
         </div>
   <div class="admin-nav-links">
       <a class="admin-nav-link" href="/manager/media/">Media Manager</a>
+      <a class="admin-nav-link" href="/manager/builder/">Build/Update Items</a>
       <a class="admin-nav-link" href="/manager/inventory/">Inventory</a>
       <a class="admin-nav-link" href="/admin/backend/">Admin Backend</a>
       <a class="admin-nav-link" href="/">Website Home</a>
