--- a/frontend/templates/canopies.html
+++ b/frontend/templates/canopies.html
@@ -58,7 +58,7 @@
         {% for x in containers_120 %}
                 <div class="container">
                     <div class="inner-container">
-                        <div class="container-left"><img src="{% static '' %}{{ x.picture }}" height="140" width="212">{% if x.sold %}<img class="sold-img" src="{% static 'sold.gif' %}">{% endif %}</div>
+                        <div class="container-left"><img src="{% static '' %}{{ x.picture }}" height="140" width="212"></div>
                         <div class="container-right">
                             {% if stuff %}
                             <span class="" style="color: pink; font-size: 20pt">{{ x.id }}</span>
@@ -94,7 +94,7 @@
         {% for x in containers_135 %}
                 <div class="container">
                     <div class="inner-container">
-                        <div class="container-left"><img src="{% static '' %}{{ x.picture }}" height="140" width="212">{% if x.sold %}<img class="sold-img" src="{% static 'sold.gif' %}">{% endif %}</div>
+                        <div class="container-left"><img src="{% static '' %}{{ x.picture }}" height="140" width="212"></div>
                         <div class="container-right">
                             {% if stuff %}
                             <span class="" style="color: pink; font-size: 20pt">{{ x.id }}</span>
@@ -130,7 +130,7 @@
         {% for x in containers_150 %}
                 <div class="container">
                     <div class="inner-container">
-                        <div class="container-left"><img src="{% static '' %}{{ x.picture }}" height="140" width="212">{% if x.sold %}<img class="sold-img" src="{% static 'sold.gif' %}">{% endif %}</div>
+                        <div class="container-left"><img src="{% static '' %}{{ x.picture }}" height="140" width="212"></div>
                         <div class="container-right">
                             {% if stuff %}
                             <span class="" style="color: pink; font-size: 20pt">{{ x.id }}</span>
@@ -166,7 +166,7 @@
         {% for x in containers_170 %}
                 <div class="container">
                     <div class="inner-container">
-                        <div class="container-left"><img src="{% static '' %}{{ x.picture }}" height="140" width="212">{% if x.sold %}<img class="sold-img" src="{% static 'sold.gif' %}">{% endif %}</div>
+                        <div class="container-left"><img src="{% static '' %}{{ x.picture }}" height="140" width="212"></div>
                         <div class="container-right">
                             {% if stuff %}
                             <span class="" style="color: pink; font-size: 20pt">{{ x.id }}</span>
@@ -202,7 +202,7 @@
         {% for x in containers_190 %}
                 <div class="container">
                     <div class="inner-container">
-                        <div class="container-left"><img src="{% static '' %}{{ x.picture }}" height="140" width="212">{% if x.sold %}<img class="sold-img" src="{% static 'sold.gif' %}">{% endif %}</div>
+                        <div class="container-left"><img src="{% static '' %}{{ x.picture }}" height="140" width="212"></div>
                         <div class="container-right">
                             {% if stuff %}
                             <span class="" style="color: pink; font-size: 20pt">{{ x.id }}</span>
@@ -238,7 +238,7 @@
         {% for x in containers_210 %}
                 <div class="container">
                     <div class="inner-container">
-                        <div class="container-left"><img src="{% static '' %}{{ x.picture }}" height="140" width="212">{% if x.sold %}<img class="sold-img" src="{% static 'sold.gif' %}">{% endif %}</div>
+                        <div class="container-left"><img src="{% static '' %}{{ x.picture }}" height="140" width="212"></div>
                         <div class="container-right">
                             {% if stuff %}
                             <span class="" style="color: pink; font-size: 20pt">{{ x.id }}</span>
@@ -274,7 +274,7 @@
         {% for x in containers_230 %}
                 <div class="container">
                     <div class="inner-container">
-                        <div class="container-left"><img src="{% static '' %}{{ x.picture }}" height="140" width="212">{% if x.sold %}<img class="sold-img" src="{% static 'sold.gif' %}">{% endif %}</div>
+                        <div class="container-left"><img src="{% static '' %}{{ x.picture }}" height="140" width="212"></div>
                         <div class="container-right">
                             {% if stuff %}
                             <span class="" style="color: pink; font-size: 20pt">{{ x.id }}</span>
