--- a/frontend/templates/instock-javelin.html
+++ b/frontend/templates/instock-javelin.html
@@ -26,7 +26,7 @@
         {% for x in containers %}
                 <div class="container">
                     <div class="inner-container">
-                        <div class="container-left"><img src="{% static '' %}{{ x.picture }}" height="140" width="212">{% if x.sold %}<img class="sold-img" src="{% static 'sold.gif' %}">{% endif %}</div>
+                        <div class="container-left"><img src="{% static '' %}{{ x.picture }}" height="140" width="212"></div>
                         <div class="container-right">
                             <p class="color-javelin">{{ x.name }}</p>
                             {% if x.serial_number %}
