--- a/frontend/templates/student.html
+++ b/frontend/templates/student.html
@@ -27,7 +27,7 @@
         {% for x in containers %}
                 <div class="container">
                     <div class="inner-container">
-                        <div class="container-left"><img src="{% static '' %}{{ x.picture }}" height="140" width="212">{% if x.sold %}<img class="sold-img" src="{% static 'sold.gif' %}">{% endif %}</div>
+                        <div class="container-left"><img src="{% static '' %}{{ x.picture }}" height="140" width="212"></div>
                         <div class="container-right">
                             <p class="color-student">{{ x.name }} - </p>
                             <p class="color-student">Serial #{{ x.serial_number }} - </p>
