FIxed images and confirmation report displays

--- a/frontend/templates/canopies.html
+++ b/frontend/templates/canopies.html
@@ -58,7 +58,7 @@
         {% for x in containers_120 %}
                 <div class="container">
                     <div class="inner-container">
-                        <div class="container-left"><img src="{% static '' %}{{ x.picture }}" height="140" width="212"></div>
+                        <div class="container-left"><img src="{% static '' %}{{ x.picture.key }}" height="140" width="212"></div>
                         <div class="container-right">
                             {% if stuff %}
                             <span class="" style="color: pink; font-size: 20pt">{{ x.id }}</span>
@@ -82,7 +82,7 @@
                             {{ x.po_number }}
                             {% endif %}
                             {% if x.confirmation_r %}
-                                <a class="color-canopies" id="color-canopies-a" href="{% static '' %}{{ x.confirmation_r }}">SEE CONFIRMATION REPORT</a>
+                                <a class="color-canopies" id="color-canopies-a" href="{% static '' %}{{ x.confirmation_r.key }}">SEE CONFIRMATION REPORT</a>
                             {% endif %}
                         </div>
                     </div>
@@ -94,7 +94,7 @@
         {% for x in containers_135 %}
                 <div class="container">
                     <div class="inner-container">
-                        <div class="container-left"><img src="{% static '' %}{{ x.picture }}" height="140" width="212"></div>
+                        <div class="container-left"><img src="{% static '' %}{{ x.picture.key }}" height="140" width="212"></div>
                         <div class="container-right">
                             {% if stuff %}
                             <span class="" style="color: pink; font-size: 20pt">{{ x.id }}</span>
@@ -118,7 +118,7 @@
                             {{ x.po_number }}
                             {% endif %}
                             {% if x.confirmation_r %}
-                                <a class="color-canopies" id="color-canopies-a" href="{% static '' %}{{ x.confirmation_r }}">SEE CONFIRMATION REPORT</a>
+                                <a class="color-canopies" id="color-canopies-a" href="{% static '' %}{{ x.confirmation_r.key }}">SEE CONFIRMATION REPORT</a>
                             {% endif %}
                         </div>
                     </div>
@@ -130,7 +130,7 @@
         {% for x in containers_150 %}
                 <div class="container">
                     <div class="inner-container">
-                        <div class="container-left"><img src="{% static '' %}{{ x.picture }}" height="140" width="212"></div>
+                        <div class="container-left"><img src="{% static '' %}{{ x.picture.key }}" height="140" width="212"></div>
                         <div class="container-right">
                             {% if stuff %}
                             <span class="" style="color: pink; font-size: 20pt">{{ x.id }}</span>
@@ -154,7 +154,7 @@
                             {{ x.po_number }}
                             {% endif %}
                             {% if x.confirmation_r %}
-                                <a class="color-canopies" id="color-canopies-a" href="{% static '' %}{{ x.confirmation_r }}">SEE CONFIRMATION REPORT</a>
+                                <a class="color-canopies" id="color-canopies-a" href="{% static '' %}{{ x.confirmation_r.key }}">SEE CONFIRMATION REPORT</a>
                             {% endif %}
                         </div>
                     </div>
@@ -166,7 +166,7 @@
         {% for x in containers_170 %}
                 <div class="container">
                     <div class="inner-container">
-                        <div class="container-left"><img src="{% static '' %}{{ x.picture }}" height="140" width="212"></div>
+                        <div class="container-left"><img src="{% static '' %}{{ x.picture.key }}" height="140" width="212"></div>
                         <div class="container-right">
                             {% if stuff %}
                             <span class="" style="color: pink; font-size: 20pt">{{ x.id }}</span>
@@ -190,7 +190,7 @@
                             {{ x.po_number }}
                             {% endif %}
                             {% if x.confirmation_r %}
-                                <a class="color-canopies" id="color-canopies-a" href="{% static '' %}{{ x.confirmation_r }}">SEE CONFIRMATION REPORT</a>
+                                <a class="color-canopies" id="color-canopies-a" href="{% static '' %}{{ x.confirmation_r.key }}">SEE CONFIRMATION REPORT</a>
                             {% endif %}
                         </div>
                     </div>
@@ -202,7 +202,7 @@
         {% for x in containers_190 %}
                 <div class="container">
                     <div class="inner-container">
-                        <div class="container-left"><img src="{% static '' %}{{ x.picture }}" height="140" width="212"></div>
+                        <div class="container-left"><img src="{% static '' %}{{ x.picture.key }}" height="140" width="212"></div>
                         <div class="container-right">
                             {% if stuff %}
                             <span class="" style="color: pink; font-size: 20pt">{{ x.id }}</span>
@@ -226,7 +226,7 @@
                             {{ x.po_number }}
                             {% endif %}
                             {% if x.confirmation_r %}
-                                <a class="color-canopies" id="color-canopies-a" href="{% static '' %}{{ x.confirmation_r }}">SEE CONFIRMATION REPORT</a>
+                                <a class="color-canopies" id="color-canopies-a" href="{% static '' %}{{ x.confirmation_r.key }}">SEE CONFIRMATION REPORT</a>
                             {% endif %}
                         </div>
                     </div>
@@ -238,7 +238,7 @@
         {% for x in containers_210 %}
                 <div class="container">
                     <div class="inner-container">
-                        <div class="container-left"><img src="{% static '' %}{{ x.picture }}" height="140" width="212"></div>
+                        <div class="container-left"><img src="{% static '' %}{{ x.picture.key }}" height="140" width="212"></div>
                         <div class="container-right">
                             {% if stuff %}
                             <span class="" style="color: pink; font-size: 20pt">{{ x.id }}</span>
@@ -262,7 +262,7 @@
                             {{ x.po_number }}
                             {% endif %}
                             {% if x.confirmation_r %}
-                                <a class="color-canopies" id="color-canopies-a" href="{% static '' %}{{ x.confirmation_r }}">SEE CONFIRMATION REPORT</a>
+                                <a class="color-canopies" id="color-canopies-a" href="{% static '' %}{{ x.confirmation_r.key }}">SEE CONFIRMATION REPORT</a>
                             {% endif %}
                         </div>
                     </div>
@@ -274,7 +274,7 @@
         {% for x in containers_230 %}
                 <div class="container">
                     <div class="inner-container">
-                        <div class="container-left"><img src="{% static '' %}{{ x.picture }}" height="140" width="212"></div>
+                        <div class="container-left"><img src="{% static '' %}{{ x.picture.key }}" height="140" width="212"></div>
                         <div class="container-right">
                             {% if stuff %}
                             <span class="" style="color: pink; font-size: 20pt">{{ x.id }}</span>
@@ -298,7 +298,7 @@
                             {{ x.po_number }}
                             {% endif %}
                             {% if x.confirmation_r %}
-                                <a class="color-canopies" id="color-canopies-a" href="{% static '' %}{{ x.confirmation_r }}">SEE CONFIRMATION REPORT</a>
+                                <a class="color-canopies" id="color-canopies-a" href="{% static '' %}{{ x.confirmation_r.key }}">SEE CONFIRMATION REPORT</a>
                             {% endif %}
                         </div>
                     </div>
