--- a/frontend/templates/instock-sportrigs.html
+++ b/frontend/templates/instock-sportrigs.html
@@ -15,7 +15,7 @@
                 <div class="container">
                     <div class="inner-container">
                         <div class="container-left">
-                            <img src="{% static '' %}{{ x.picture }}" height="140" width="212">
+                            <img src="{% static '' %}{{ x.picture.key }}" height="140" width="212">
                         </div>
                         <div class="container-right">
                             <p class="color-vector">Brand New Vector {{ x.name }}</p>
@@ -41,7 +41,7 @@
                             {{ x.po_number }}
                             {% endif %}
                             {% if x.confirmation_r %}
-                                <a class="color-vector" id="color-vector-a" href="{% static '' %}{{ x.confirmation_r }}">SEE CONFIRMATION REPORT</a>
+                                <a class="color-vector" id="color-vector-a" href="{% static '' %}{{ x.confirmation_r.key }}">SEE CONFIRMATION REPORT</a>
                             {% endif %}
                         </div>
                     </div>
